@@ -794,6 +794,7 @@ extern bitstr_t * select_p_resv_test(bitstr_t *avail_bitmap, uint32_t node_cnt)
 extern void select_p_ba_init(node_info_msg_t *node_info_ptr, bool sanity_check)
 {
 	int i, j, offset;
+	int dims = slurmdb_setup_cluster_dims();
 
 	if (select_cray_dim_size[0] == -1) {
 		node_info_t *node_ptr;
@@ -804,15 +805,14 @@ extern void select_p_ba_init(node_info_msg_t *node_info_ptr, bool sanity_check)
 		 * connectivity in X-dimension.  Just incase they
 		 * decide to change it where we only get 2 instead of
 		 * 3 we will initialize it later. */
-		for (i = 1; i < SYSTEM_DIMENSIONS; i++)
+		for (i = 1; i < dims; i++)
 			select_cray_dim_size[i] = -1;
-
 		for (i = 0; i < node_info_ptr->record_count; i++) {
 			node_ptr = &(node_info_ptr->node_array[i]);
 			if (!node_ptr->node_addr ||
-			    (strlen(node_ptr->node_addr) != SYSTEM_DIMENSIONS))
+			    (strlen(node_ptr->node_addr) != dims))
 				continue;
-			for (j = 0; j < SYSTEM_DIMENSIONS; j++) {
+			for (j = 0; j < dims; j++) {
 				offset = select_char2coord(
 					node_ptr->node_addr[j]);
 				select_cray_dim_size[j] =
@@ -829,9 +829,8 @@ extern void select_p_ba_init(node_info_msg_t *node_info_ptr, bool sanity_check)
 	 */
 	if (working_cluster_rec) {
 		xfree(working_cluster_rec->dim_size);
-		working_cluster_rec->dim_size = xmalloc(sizeof(int) *
-							SYSTEM_DIMENSIONS);
-		for (j = 0; j < SYSTEM_DIMENSIONS; j++)
+		working_cluster_rec->dim_size = xmalloc(sizeof(int) * dims);
+		for (j = 0; j < dims; j++)
 			working_cluster_rec->dim_size[j] =
 				select_cray_dim_size[j];
 	}
@@ -841,6 +840,7 @@ extern void select_p_ba_init(node_info_msg_t *node_info_ptr, bool sanity_check)
 
 extern int *select_p_ba_get_dims(void)
 {
+	info("got here with %d", select_cray_dim_size[0]);
 	/* Size of system in each dimension as set by basil_geometry(),
 	 * which might not be called yet */
 	if (select_cray_dim_size[0] != -1)
